--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>3d Model For Engineering</title>
-  <link rel="stylesheet" href="stylesheets/mycss.css" type="text/css">
-  <link rel="shortcut icon" href="images/Phonebook.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/mycss.css" type="text/css">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
