--- a/3d models/FigureP5.10.html
+++ b/3d models/FigureP5.10.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>3D Model</title>
-    <link rel="stylesheet" href="model-viewer-demo.css">
-    <link rel="shortcut icon" href="images/Phonebook.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://arun457.github.io/3Dmodels/css/model-viewer.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
