--- a/3d models/orthographic_projections/ortho_FigureP5.1.html
+++ b/3d models/orthographic_projections/ortho_FigureP5.1.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="stylesheets/contacts.css" type="text/css">
-  <link rel="shortcut icon" href="images/Phonebook.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://arun457.github.io/3Dmodels/css/orthographic.css" type="text/css">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <title>Orthographic Projection</title>
 </head>
 
