--- a/contents.html
+++ b/contents.html
@@ -4,8 +4,8 @@
 <head>
 
   <meta charset="utf-8">
-  <link rel="stylesheet" href="stylesheets/content.css" type="text/css">
-  <link rel="shortcut icon" href="images/Phonebook.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/content.css" type="text/css">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <title>Contents</title>
 
 </head>
