--- a/sheet7.html
+++ b/sheet7.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/orthographic.css" type="text/css">
+  <link rel="stylesheet" href="css/sheet.css" type="text/css">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <title>Contents</title>
 </head>
