--- a/contents.html
+++ b/contents.html
@@ -13,9 +13,7 @@
 
 <body>
 
-  <h1>Homepage</h1>
-
-  <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
+  <h1 class="heading">Homepage</h1>
 
 
   <a href="sheet5.html"><img src="images\sheet5.jpg"></a>
@@ -32,12 +30,12 @@
   <h1>Open it with 3d viewer for Windows 10</h1>
   <h1><a href="https://play.google.com/store/apps/details?id=com.transformandlighting.emb3d&hl=en&gl=US">Click here to
       download 3D viewer for Android</a></h1>
-  <h1><a href="https://mega.nz/file/jkE1EC6R#l5INwKuOVWM9TBYR1360Zw12qKnV4ymv4WnRhmDK2tQ">Click here to Download
-      Bandicam Cracker</a></h1>
+
   <h1>.......................................................</h1>
   <h1>Below is the tutorial to open 3d files in Windows 10 and Android.</h1>
-  <iframe width="972" height="547" src="https://www.youtube.com/embed/SawLCr6lCxc" title="YouTube video player"
-    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  <iframe width="972" height="547" src="https://www.youtube.com/embed/SawLCr6lCxc" class="youtube-video"
+    title="YouTube video player" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen></iframe>
 
   <h1>.......................................................</h1>
