--- a/sheet6.html
+++ b/sheet6.html
@@ -1,36 +1,94 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
+
+<!-- Mirrored from cwithjen.somee.com/6_Operators.aspx by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Sep 2021 13:43:19 GMT -->
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/sheet.css" type="text/css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+
+  <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+  <link href="css/sheet.css" rel="stylesheet" />
+  <link href="css/MyStyle.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/prism.css" type="text/css">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <title>Contents</title>
+  <title>Sheets</title>
+
 </head>
 
 <body>
-  <h1>Homepage</h1>
 
-  <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
-
-  <a href="3d models\FigureP6.1.html"><img src="images/FigureP6.1.jpg"></a>
-  <a href="3d models\FigureP6.2.html"><img src="images/FigureP6.2.jpg"></a>
-  <a href="3d models\FigureP6.3.html"><img src="images/FigureP6.3.jpg"></a>
-  <a href="3d models\FigureP6.4.html"><img src="images/FigureP6.4.jpg"></a>
-  <a href="3d models\FigureP6.5.html"><img src="images/FigureP6.5.jpg"></a>
-  <a href="3d models\FigureP6.6.html"><img src="images/FigureP6.6.jpg"></a>
-  <a href="3d models\FigureP6.7.html"><img src="images/FigureP6.7.jpg"></a>
-  <a href="3d models\FigureP6.8.html"><img src="images/FigureP6.8.jpg"></a>
-  
-
-  
+  <div class="p-3">
 
 
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link active" id="Notes-tab" data-toggle="tab" href="#Notes" role="tab" aria-controls="Outlines"
+          aria-selected="true">Questions</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="Notes-tab" data-toggle="tab" href="#Questions" role="tab" aria-controls="Questions"
+          aria-selected="false">Guide</a>
+      </li>
+    </ul>
+
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade" id="Questions" role="tabpanel" aria-labelledby="Questions-tab">
+
+        <div class="row">
+
+          <div class="p-3 col-lg-6 col-md-12">
+            <div class="p-3 text-justify">
+              <!-- Embedding video -->
+
+
+              <!-- Paste your embed video link here -->
 
 
 
+              <!-- embedding video finish -->
+            </div>
+          </div>
 
+        </div>
+
+      </div>
+
+      <div class="tab-pane fade show active" id="Notes" role="tabpanel" aria-labelledby="Notes-tab">
+
+        <h1>QUESTIONS</h1>
+
+        <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
+
+        <a href="3d models\FigureP6.1.html"><img src="images/FigureP6.1.jpg"></a>
+        <a href="3d models\FigureP6.2.html"><img src="images/FigureP6.2.jpg"></a>
+        <a href="3d models\FigureP6.3.html"><img src="images/FigureP6.3.jpg"></a>
+        <a href="3d models\FigureP6.4.html"><img src="images/FigureP6.4.jpg"></a>
+        <a href="3d models\FigureP6.5.html"><img src="images/FigureP6.5.jpg"></a>
+        <a href="3d models\FigureP6.6.html"><img src="images/FigureP6.6.jpg"></a>
+        <a href="3d models\FigureP6.7.html"><img src="images/FigureP6.7.jpg"></a>
+        <a href="3d models\FigureP6.8.html"><img src="images/FigureP6.8.jpg"></a>
+
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <script src="js/jquery-3.5.1.slim.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/prism.js"></script>
 
 </body>
+
+<!-- Mirrored from cwithjen.somee.com/6_Operators.aspx by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Sep 2021 13:43:19 GMT -->
 
 </html>
