--- a/3d models/sheet11/Figure11.1.a.html
+++ b/3d models/sheet11/Figure11.1.a.html
@@ -12,12 +12,12 @@
 
   <!-- Bootstrap CSS -->
 
-  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://arun457.github.io/3Dmodels/css/bootstrap.min.css" rel="stylesheet" />
 
-  <link href="css/sheet.css" rel="stylesheet" />
-  <link href="css/MyStyle.css" rel="stylesheet" />
-   
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link href="https://arun457.github.io/3Dmodels/css/3dmodels.css" rel="stylesheet" />
+  <link href="https://arun457.github.io/3Dmodels/css/MyStyle.css" rel="stylesheet" />
+
+  <link rel="shortcut icon" href="https://arun457.github.io/3Dmodels/images/favicon.ico" type="image/x-icon">
   <title>Sheets</title>
 
 </head>
@@ -50,8 +50,6 @@
 
               <!-- Paste your embed video link here -->
 
-
-
               <!-- embedding video finish -->
             </div>
           </div>
@@ -62,18 +60,7 @@
 
       <div class="tab-pane fade show active" id="Notes" role="tabpanel" aria-labelledby="Notes-tab">
 
-        <h1>QUESTIONS</h1>
 
-        <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
-
-        <a href="3d models\FigureP6.1.html"><img src="images/FigureP6.1.jpg"></a>
-        <a href="3d models\FigureP6.2.html"><img src="images/FigureP6.2.jpg"></a>
-        <a href="3d models\FigureP6.3.html"><img src="images/FigureP6.3.jpg"></a>
-        <a href="3d models\FigureP6.4.html"><img src="images/FigureP6.4.jpg"></a>
-        <a href="3d models\FigureP6.5.html"><img src="images/FigureP6.5.jpg"></a>
-        <a href="3d models\FigureP6.6.html"><img src="images/FigureP6.6.jpg"></a>
-        <a href="3d models\FigureP6.7.html"><img src="images/FigureP6.7.jpg"></a>
-        <a href="3d models\FigureP6.8.html"><img src="images/FigureP6.8.jpg"></a>
 
 
       </div>
@@ -82,10 +69,10 @@
 
   </div>
 
-  <script src="js/jquery-3.5.1.slim.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/popper.min.js"></script>
-   
+  <script src="https://arun457.github.io/3Dmodels/js/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://arun457.github.io/3Dmodels/js/bootstrap.min.js"></script>
+  <script src="https://arun457.github.io/3Dmodels/js/popper.min.js"></script>
+
 
 </body>
 
