--- a/sheet2.html
+++ b/sheet2.html
@@ -49,49 +49,48 @@
 
 
               <!-- Paste your embed video link here -->
+              <iframe width="972" height="547" class="youtube-video"
+                src="https://www.youtube.com/embed/RVfudixm59U?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
               <iframe width="991" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/eaTYVYH6enw?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/Z79KjSw7XEo?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
+                src="https://www.youtube.com/embed/eUfw3LoML0k?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
               <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/Xa7LQjIbp9U?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
+                src="https://www.youtube.com/embed/e5vnJOWEG70?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
               <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/dopnlAt1kqg?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
+                src="https://www.youtube.com/embed/dkzLqbHuPfY?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
               <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/KctfcYiVsRc?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
+                src="https://www.youtube.com/embed/g3lF1AJn1iU?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
               <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/7K7nssJ_06s?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
+                src="https://www.youtube.com/embed/hRl-KWZSnwc?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
               <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/Q3ifYWou95o?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
+                src="https://www.youtube.com/embed/6NAUwWxbbfE?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
               <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/HaGXgYb9yVs?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
+                src="https://www.youtube.com/embed/F66uDK0TQ7A?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
               <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/iUpxUOSOT7g?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
+                src="https://www.youtube.com/embed/yDO7B6tFtiU?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -111,31 +110,22 @@
 
         <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
 
-        <a href="3d models\FigureP5.1.html"><img src="images/FigureP5.1.jpg"></a>
+        <a href="3d models/sheet2/1.html"><img src="images/sheet2/1.jpg"></a>
+        <a href="3d models/sheet2/2.html"><img src="images/sheet2/2.jpg"></a>
+        <a href="3d models/sheet2/3.html"><img src="images/sheet2/3.jpg"></a>
+        <a href="3d models/sheet2/4.html"><img src="images/sheet2/4.jpg"></a>
+        <a href="3d models/sheet2/5.html"><img src="images/sheet2/5.jpg"></a>
+        <a href="3d models/sheet2/6.html"><img src="images/sheet2/6.jpg"></a>
+        <a href="3d models/sheet2/7.html"><img src="images/sheet2/7.jpg"></a>
+        <a href="3d models/sheet2/8.html"><img src="images/sheet2/8.jpg"></a>
+        <a href="3d models/sheet2/9.html"><img src="images/sheet2/9.jpg"></a>
+        <a href="3d models/sheet2/10.html"><img src="images/sheet2/10.jpg"></a>
+        <a href="3d models/sheet2/11.html"><img src="images/sheet2/11.jpg"></a>
+        <a href="3d models/sheet2/12.html"><img src="images/sheet2/12.jpg"></a>
+        <a href="3d models/sheet2/13.html"><img src="images/sheet2/13.jpg"></a>
+        <a href="3d models/sheet2/14.html"><img src="images/sheet2/14.jpg"></a>
 
-        <a href="3d models\FigureP5.2.html"><img src="images/FigureP5.2.jpg"></a>
 
-        <a href="3d models\FigureP5.3.html"><img src="images/FigureP5.3.jpg"></a>
-
-        <a href="3d models\FigureP5.4.html"><img src="images/FigureP5.4.jpg"></a>
-
-        <a href="3d models\FigureP5.5.html"><img src="images/FigureP5.5.jpg"></a>
-
-        <a href="3d models\FigureP5.6.html"><img src="images/FigureP5.6.jpg"></a>
-
-        <a href="3d models\FigureP5.7.html"><img src="images/FigureP5.7.jpg"></a>
-
-        <a href="3d models\FigureP5.8.html"><img src="images/FigureP5.8.jpg"></a>
-
-        <a href="3d models\FigureP5.9.html"><img src="images/FigureP5.9.jpg"></a>
-
-        <a href="3d models\FigureP5.10.html"><img src="images/FigureP5.10.jpg"></a>
-
-        <a href="3d models\FigureP5.11.html"><img src="images/FigureP5.11.jpg"></a>
-
-        <a href="3d models\FigureP5.12.html"><img src="images/FigureP5.12.jpg"></a>
-
-        <a href="3d models\FigureP5.13.html"><img src="images/FigureP5.13.jpg"></a>
 
 
 
