--- a/3d models/sheet11/Figure11.1.a.html
+++ b/3d models/sheet11/Figure11.1.a.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html lang="en">
 
-<!-- Mirrored from cwithjen.somee.com/6_Operators.aspx by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Sep 2021 13:43:19 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
   <!-- Required meta tags -->
@@ -13,12 +12,10 @@
   <!-- Bootstrap CSS -->
 
   <link href="https://arun457.github.io/3Dmodels/css/bootstrap.min.css" rel="stylesheet" />
-
-  <link href="https://arun457.github.io/3Dmodels/css/3dmodels.css" rel="stylesheet" />
-  <link href="https://arun457.github.io/3Dmodels/css/MyStyle.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://arun457.github.io/3Dmodels/css/model-viewer.css">
 
   <link rel="shortcut icon" href="https://arun457.github.io/3Dmodels/images/favicon.ico" type="image/x-icon">
-  <title>Sheets</title>
+  <title>3D Models</title>
 
 </head>
 
@@ -26,31 +23,32 @@
 
   <div class="p-3">
 
-
     <ul class="nav nav-tabs" id="myTab" role="tablist">
       <li class="nav-item" role="presentation">
-        <a class="nav-link active" id="Notes-tab" data-toggle="tab" href="#Notes" role="tab" aria-controls="Outlines"
-          aria-selected="true">Questions</a>
+        <a class="nav-link active" id="model-tab" data-toggle="tab" href="#modeltab" role="tab" aria-controls="model"
+          aria-selected="true">3D Model</a>
       </li>
       <li class="nav-item" role="presentation">
-        <a class="nav-link" id="Notes-tab" data-toggle="tab" href="#Questions" role="tab" aria-controls="Questions"
-          aria-selected="false">Guide</a>
+        <a class="nav-link" id="sectional-tab" data-toggle="tab" href="#sectional" role="tab" aria-controls="sectional"
+          aria-selected="false">Sectional View</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="orthographic-tab" data-toggle="tab" href="#orthographic" role="tab"
+          aria-controls="orthographic" aria-selected="false">Orthographic Projection</a>
       </li>
     </ul>
 
     <div class="tab-content" id="myTabContent">
-      <div class="tab-pane fade" id="Questions" role="tabpanel" aria-labelledby="Questions-tab">
+      <div class="tab-pane fade" id="sectional" role="tabpanel" aria-labelledby="sectional-tab">
 
         <div class="row">
 
           <div class="p-3 col-lg-6 col-md-12">
             <div class="p-3 text-justify">
-              <!-- Embedding video -->
+              <!-- Paste your Sectional View Here -->
 
-
-              <!-- Paste your embed video link here -->
-
-              <!-- embedding video finish -->
+              <h1>sectional</h1>
+              <!-- End of Sectional View -->
             </div>
           </div>
 
@@ -58,11 +56,25 @@
 
       </div>
 
-      <div class="tab-pane fade show active" id="Notes" role="tabpanel" aria-labelledby="Notes-tab">
+      <div class="tab-pane fade show active" id="modeltab" role="tabpanel" aria-labelledby="model-tab">
+        <!-- Paste your 3D model Here -->
 
+        <div id="holder">
+          <div id="model">
+            <model-viewer src="models/Figure11.1.a.glb" alt="3D Model" camera-controls="">
+            </model-viewer>
+          </div>
+        </div>
 
+        <!-- End of 3D model -->
+      </div>
 
+      <!-- -------------------------------------------------------------------------------------------------->
+      <div class="tab-pane fade show" id="orthographic" role="tabpanel" aria-labelledby="orthographic-tab">
+        <!-- Paste the Orthographic projection Here -->
 
+        <h1>ortho</h1>
+        <!-- End of Orthographic projection -->
       </div>
 
     </div>
@@ -72,10 +84,11 @@
   <script src="https://arun457.github.io/3Dmodels/js/jquery-3.5.1.slim.min.js"></script>
   <script src="https://arun457.github.io/3Dmodels/js/bootstrap.min.js"></script>
   <script src="https://arun457.github.io/3Dmodels/js/popper.min.js"></script>
-
+  <!-- Loads model-viewer for modern browsers -->
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
+  <!-- Loads model-viewer for older browsers -->
+  <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 
 </body>
-
-<!-- Mirrored from cwithjen.somee.com/6_Operators.aspx by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Sep 2021 13:43:19 GMT -->
 
 </html>
