--- a/3d models/sheet11/Figure11.1.a.html
+++ b/3d models/sheet11/Figure11.1.a.html
@@ -1,7 +1,5 @@
 <!doctype html>
 <html lang="en">
-
-
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
@@ -10,10 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
-
   <link href="https://arun457.github.io/3Dmodels/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://arun457.github.io/3Dmodels/css/model-viewer.css">
-
   <link rel="shortcut icon" href="https://arun457.github.io/3Dmodels/images/favicon.ico" type="image/x-icon">
   <title>3D Models</title>
 
@@ -39,22 +35,6 @@
     </ul>
 
     <div class="tab-content" id="myTabContent">
-      <div class="tab-pane fade" id="sectional" role="tabpanel" aria-labelledby="sectional-tab">
-
-        <div class="row">
-
-          <div class="p-3 col-lg-6 col-md-12">
-            <div class="p-3 text-justify">
-              <!-- Paste your Sectional View Here -->
-
-              <h1>sectional</h1>
-              <!-- End of Sectional View -->
-            </div>
-          </div>
-
-        </div>
-
-      </div>
 
       <div class="tab-pane fade show active" id="modeltab" role="tabpanel" aria-labelledby="model-tab">
         <!-- Paste your 3D model Here -->
@@ -68,12 +48,18 @@
 
         <!-- End of 3D model -->
       </div>
+      <!-- ---------------------------------------------------------------------------------------------------->
+      <div class="tab-pane fade" id="sectional" role="tabpanel" aria-labelledby="sectional-tab">
+        <!-- Paste your Sectional View Here -->
 
+
+        <!-- End of Sectional View -->
+      </div>
       <!-- -------------------------------------------------------------------------------------------------->
       <div class="tab-pane fade show" id="orthographic" role="tabpanel" aria-labelledby="orthographic-tab">
         <!-- Paste the Orthographic projection Here -->
 
-        <h1>ortho</h1>
+
         <!-- End of Orthographic projection -->
       </div>
 
@@ -84,10 +70,11 @@
   <script src="https://arun457.github.io/3Dmodels/js/jquery-3.5.1.slim.min.js"></script>
   <script src="https://arun457.github.io/3Dmodels/js/bootstrap.min.js"></script>
   <script src="https://arun457.github.io/3Dmodels/js/popper.min.js"></script>
-  <!-- Loads model-viewer for modern browsers -->
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
-  <!-- Loads model-viewer for older browsers -->
-  <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
+
+  <script type="module" src="https://arun457.github.io/3Dmodels/js/model-viewer.js"></script>
+  <!-- <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
+
+  <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script> -->
 
 </body>
 
