--- a/sheet2.html
+++ b/sheet2.html
@@ -16,7 +16,7 @@
 
   <link href="css/sheet.css" rel="stylesheet" />
   <link href="css/MyStyle.css" rel="stylesheet" />
-   
+
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <title>Sheets</title>
 
@@ -106,7 +106,7 @@
 
       <div class="tab-pane fade show active" id="Notes" role="tabpanel" aria-labelledby="Notes-tab">
 
-        <h1>QUESTIONS</h1>
+        <h1>Sheet 2</h1>
 
         <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
 
@@ -138,7 +138,7 @@
   <script src="js/jquery-3.5.1.slim.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/popper.min.js"></script>
-   
+
 
 </body>
 
