--- a/sheet6.html
+++ b/sheet6.html
@@ -62,7 +62,7 @@
 
       <div class="tab-pane fade show active" id="Notes" role="tabpanel" aria-labelledby="Notes-tab">
 
-        <h1>QUESTIONS</h1>
+        <h1>SHEET 6</h1>
 
         <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
 
