--- a/contents.html
+++ b/contents.html
@@ -46,9 +46,7 @@
   <h1> .............................</h1>
   <h1> !!ENJOY!!</h1>
 
-  <!-- messenger plugin start -->
-
-  <!-- Messenger Chat plugin Code -->
+  !-- Messenger Chat plugin Code -->
   <div id="fb-root"></div>
 
   <!-- Your Chat plugin code -->
@@ -63,7 +61,7 @@
     window.fbAsyncInit = function () {
       FB.init({
         xfbml: true,
-        version: 'v11.0'
+        version: 'v12.0'
       });
     };
 
@@ -75,9 +73,6 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
   </script>
-
-  <!-- messenger plugin ends -->
-
 
 
 
