--- a/contents.html
+++ b/contents.html
@@ -46,7 +46,7 @@
   <h1> .............................</h1>
   <h1> !!ENJOY!!</h1>
 
-  !-- Messenger Chat plugin Code -->
+  <!-- Messenger Chat plugin Code Starts-->
   <div id="fb-root"></div>
 
   <!-- Your Chat plugin code -->
@@ -74,7 +74,7 @@
     }(document, 'script', 'facebook-jssdk'));
   </script>
 
-
+  <!-- Messenger Chat plugin Code Ends-->
 
 </body>
 
