--- a/3d models/sheet7/FigureP7.3.a.html
+++ b/3d models/sheet7/FigureP7.3.a.html
@@ -48,7 +48,7 @@
       <!-- -------------------------------------------------------------------------------------------------->
       <div class="tab-pane fade show" id="orthographic" role="tabpanel" aria-labelledby="orthographic-tab">
         <!-- Paste the Orthographic projection Here -->
-        <img id="orthographic" src="orthographic/FigureP7.3.a.png" alt="Orthographic Projection">
+        <img id="orthographic" src="orthographic/FigureP7.3.a.jpg" alt="Orthographic Projection">
 
         <!-- End of Orthographic projection -->
       </div>
