--- a/3d models/sheet7/FigureP7.4.a.html
+++ b/3d models/sheet7/FigureP7.4.a.html
@@ -37,7 +37,7 @@
 
         <div id="holder">
           <div id="model">
-            <model-viewer src="models/FigureP7.3.b.glb" alt="3D Model" camera-controls="">
+            <model-viewer src="models/FigureP7.4.a.glb" alt="3D Model" camera-controls="">
             </model-viewer>
           </div>
         </div>
@@ -48,7 +48,7 @@
       <!-- -------------------------------------------------------------------------------------------------->
       <div class="tab-pane fade show" id="orthographic" role="tabpanel" aria-labelledby="orthographic-tab">
         <!-- Paste the Orthographic projection Here -->
-        <img id="orthographic" src="orthographic/FigureP7.3.b.jpg" alt="Orthographic Projection">
+        <img id="orthographic" src="orthographic/FigureP7.4.a.jpg" alt="Orthographic Projection">
 
         <!-- End of Orthographic projection -->
       </div>
