--- a/sheet7.html
+++ b/sheet7.html
@@ -73,6 +73,8 @@
         <a href="3d models/sheet7/FigureP7.3.a.html"><img src="images/sheet7/FigureP7.3.a.jpg"></a>7
         <a href="3d models/sheet7/FigureP7.3.b.html"><img src="images/sheet7/FigureP7.3.b.jpg"></a>7
         <a href="3d models/sheet7/FigureP7.3.c.html"><img src="images/sheet7/FigureP7.3.c.jpg"></a>
+        <a href="3d models/sheet7/FigureP7.4.a.html"><img src="images/sheet7/FigureP7.4.a.jpg"></a>
+        <a href="3d models/sheet7/FigureP7.4.b.html"><img src="images/sheet7/FigureP7.4.b.jpg"></a>
 
 
 
