--- a/sheet10.html
+++ b/sheet10.html
@@ -82,7 +82,8 @@
 
         <h1>SHEET 10</h1>
 
-        <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
+        <p>"Note: It is suggested to watch the Guide Video First before starting the Tutorial"</p>
+        <p>Trust me. It worth it... You Won't Regrate</p>
 
         <a href="3d models/sheet10/Figure10.1.html"><img src="images/sheet10/Figure10.1.jpg"></a>
         <a href="3d models/sheet10/Figure10.2.html"><img src="images/sheet10/Figure10.2.jpg"></a>
