--- a/sheet11.html
+++ b/sheet11.html
@@ -50,7 +50,7 @@
 
               <!-- Paste your embed video link here -->
 
-
+              <h1>Already included in Guide of SHEET 5</h1>
               <!-- embedding video finish -->
             </div>
           </div>
@@ -63,7 +63,8 @@
 
         <h1>SHEET 11</h1>
 
-        <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
+        <p>"Note: It is suggested to watch the Guide Video First before starting the Tutorial"</p>
+        <p>Trust me. It worth it... You Won't Regrate</p>
 
         <a href="3d models/sheet11/Figure11.1.a.html"><img src="images/sheet11/Figure11.1.a.jpg"></a>
         <a href="3d models/sheet11/Figure11.1.b.html"><img src="images/sheet11/Figure11.1.b.jpg"></a>
