--- a/sheet5.html
+++ b/sheet5.html
@@ -109,7 +109,8 @@
 
         <h1>SHEET 5</h1>
 
-        <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
+        <p>"Note: It is suggested to watch the Guide Video First before starting the Tutorial"</p>
+        <p>Trust me. It worth it... You Won't Regrate</p>
 
         <a href="3d models/sheet5/FigureP5.1.html"><img src="images/sheet5/FigureP5.1.jpg"></a>
 
