--- a/sheet8.html
+++ b/sheet8.html
@@ -49,7 +49,61 @@
 
 
               <!-- Paste your embed video link here -->
-
+              <iframe width="972" height="547" class="youtube-video"
+                src="https://www.youtube.com/embed/M34KzkUlZKk?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+              <iframe width="972" height="547" class="youtube-video"
+                src="https://www.youtube.com/embed/Vs9uAyMi2Uw?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+              <iframe width="972" height="547" class="youtube-video"
+                src="https://www.youtube.com/embed/D6OS5SC5GVo?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+              <iframe width="972" height="547" class="youtube-video"
+                src="https://www.youtube.com/embed/t4rFuPAp3xE?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+              <iframe width="972" height="547" class="youtube-video"
+                src="https://www.youtube.com/embed/zk5l1jJrdBA?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+              <iframe width="972" height="547" class="youtube-video"
+                src="https://www.youtube.com/embed/XBp-Zz6ani8?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+              <iframe width="972" height="547" class="youtube-video"
+                src="https://www.youtube.com/embed/TOfplJC5zXI?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+              <iframe width="972" height="547" class="youtube-video"
+                src="https://www.youtube.com/embed/4GHwX_laS4g?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+              <iframe width="972" height="547" class="youtube-video"
+                src="https://www.youtube.com/embed/k6msrousIVk?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+              <iframe width="972" height="547" class="youtube-video"
+                src="https://www.youtube.com/embed/a9S7GbFhpFw?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+              <iframe width="972" height="547" class="youtube-video"
+                src="https://www.youtube.com/embed/SbmOPUaV2Yg?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
 
               <!-- embedding video finish -->
             </div>
@@ -63,7 +117,8 @@
 
         <h1>SHEET 5</h1>
 
-        <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
+        <p>"Note: It is suggested to watch the Guide Video First before starting the Tutorial"</p>
+        <p>Trust me. It worth it... You Won't Regrate</p>
 
         <a href="3d models/sheet8/Figure8.1.html"><img src="images/sheet8/Figure8.1.jpg"></a>
         <a href="3d models/sheet8/Figure8.2.html"><img src="images/sheet8/Figure8.2.jpg"></a>
