--- a/sheet7.html
+++ b/sheet7.html
@@ -49,7 +49,7 @@
 
 
               <!-- Paste your embed video link here -->
-
+              <h1>Already included in Guide of SHEET 5</h1>
 
 
               <!-- embedding video finish -->
@@ -64,7 +64,8 @@
 
         <h1>SHEET 7</h1>
 
-        <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
+        <p>"Note: It is suggested to watch the Guide Video First before starting the Tutorial"</p>
+        <p>Trust me. It worth it... You Won't Regrate</p>
 
         <a href="3d models/sheet7/FigureP7.1.a.html"><img src="images/sheet7/FigureP7.1.a.jpg"></a>7
         <a href="3d models/sheet7/FigureP7.1.b.html"><img src="images/sheet7/FigureP7.1.b.jpg"></a>7
