--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <h1>Welcome To 3d model for engineering by Arun Shrestha</h1>
-  <p><a href="contents.html">Let's go</a></p>
-
+  <h1>Welcome To 3D model for engineering by Arun Shrestha</h1>
+  <!-- <p><a href="contents.html">Let's go</a></p> -->
+  <a href="contents.html"><button>Let's go</button></a>
 </body>
 
 </html>
