--- a/contents.html
+++ b/contents.html
@@ -1,36 +1,89 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
+
+<!-- Mirrored from cwithjen.somee.com/6_Operators.aspx by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Sep 2021 13:43:19 GMT -->
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 
 <head>
-
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/content.css" type="text/css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+
+  <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+  <link href="css/content.css" rel="stylesheet" />
+  <link href="css/MyStyle.css" rel="stylesheet" />
+
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <title>Contents</title>
 
 </head>
 
-
 <body>
 
-  <h1 class="heading">Homepage</h1>
-
-  <a href="sheet5.html"><img src="images/sheets/sheet5.jpg"></a>
-
-  <a href="sheet6.html"><img src="images/sheets/sheet6.jpg"></a>
-
-  <a href="sheet7.html"><img src="images/sheets/sheet7.jpg"></a>
-
-  <a href="sheet8.html"><img src="images/sheets/sheet8.jpg"></a>
-
-  <a href="sheet9.html"><img src="images/sheets/sheet9.jpg"></a>
-
-  <a href="sheet10.html"><img src="images/sheets/sheet10.jpg"></a>
-
-  <a href="sheet11.html"><img src="images/sheets/sheet11.jpg"></a>
+  <div class="p-3">
 
 
-  <!-- <h1>Click below to download original 3d models</h1>
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link active" id="Notes-tab" data-toggle="tab" href="#Notes" role="tab" aria-controls="Outlines"
+          aria-selected="true">Sheets</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="Notes-tab" data-toggle="tab" href="#Questions" role="tab" aria-controls="Questions"
+          aria-selected="false">Resources</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="about-me-tab" data-toggle="tab" href="#About-Me" role="tab" aria-controls="About-Me"
+          aria-selected="false">About Me</a>
+      </li>
+    </ul>
+
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade" id="Questions" role="tabpanel" aria-labelledby="Questions-tab">
+
+        <!-- Resources Starts-->
+        <a href="https://drive.google.com/file/d/1WD7xFBogHqqvn3_JyUPw-ZMIa7UupStz/view?usp=sharing"><button
+            id="tutorial">Tutorial</button></a>
+        <a href="https://drive.google.com/file/d/1boQksOAiZFhtdGoLouSmgXc_YdmrdYzc/view?usp=sharing"><button
+            id="lettering-sheet">Lettering Sheet</button></a>
+        <a href="https://drive.google.com/file/d/1k0s5MAGzHXu-88kzghgHlZPnD8yVNEkp/view?usp=sharing"><button
+            id="past-questions">Past Questions</button></a>
+        <a href="https://drive.google.com/file/d/1rwy0qlHdb58fs5tRBQ9UoqBc53xhR-Hf/view?usp=sharing"><button
+            id="drawing-book">Drawing Book</button></a>
+        <!-- Resources Ends -->
+
+      </div>
+
+      <div class="tab-pane fade" id="About-Me" role="tabpanel" aria-labelledby="About-Me-tab">
+
+        <iframe src="https://www.sthaarun.com.np" frameborder="0"></iframe>
+
+      </div>
+
+      <div class="tab-pane fade show active" id="Notes" role="tabpanel" aria-labelledby="Notes-tab">
+
+        <h1 class="heading">Homepage</h1>
+
+        <a href="sheet5.html"><img src="images/sheets/sheet5.jpg"></a>
+
+        <a href="sheet6.html"><img src="images/sheets/sheet6.jpg"></a>
+
+        <a href="sheet7.html"><img src="images/sheets/sheet7.jpg"></a>
+
+        <a href="sheet8.html"><img src="images/sheets/sheet8.jpg"></a>
+
+        <a href="sheet9.html"><img src="images/sheets/sheet9.jpg"></a>
+
+        <a href="sheet10.html"><img src="images/sheets/sheet10.jpg"></a>
+
+        <a href="sheet11.html"><img src="images/sheets/sheet11.jpg"></a>
+
+
+        <!-- <h1>Click below to download original 3d models</h1>
   <p><a href="https://drive.google.com/drive/folders/1dnymR19-vr2lWZQ6PAfVvvvS2LjGFTlr?usp=sharing">Link 1</a></p>
   <p><a href="https://mega.nz/folder/WxtWUCzT#-Lk9-_Zv3Fx6ICDbhFTWLg">Link 2</a></p>
   <h1>Open it with 3d viewer for Windows 10</h1>
@@ -44,41 +97,56 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen></iframe> -->
 
-  <h1>.......................................................</h1>
-  <h1> ..........................................</h1>
-  <h1> .............................</h1>
-  <h1> !!ENJOY!!</h1>
+        <h1>.......................................................</h1>
+        <h1> ..........................................</h1>
+        <h1> .............................</h1>
+        <h1> !!ENJOY!!</h1>
 
-  <!-- Messenger Chat plugin Code Starts-->
-  <div id="fb-root"></div>
+        <!-- Messenger Chat plugin Code Starts-->
+        <div id="fb-root"></div>
 
-  <!-- Your Chat plugin code -->
-  <div id="fb-customer-chat" class="fb-customerchat">
+        <!-- Your Chat plugin code -->
+        <div id="fb-customer-chat" class="fb-customerchat">
+        </div>
+
+        <script>
+          var chatbox = document.getElementById('fb-customer-chat');
+          chatbox.setAttribute("page_id", "100924292344338");
+          chatbox.setAttribute("attribution", "biz_inbox");
+
+          window.fbAsyncInit = function () {
+            FB.init({
+              xfbml: true,
+              version: 'v12.0'
+            });
+          };
+
+          (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+            fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', 'facebook-jssdk'));
+        </script>
+
+        <!-- Messenger Chat plugin Code Ends-->
+
+
+
+      </div>
+
+    </div>
+
   </div>
 
-  <script>
-    var chatbox = document.getElementById('fb-customer-chat');
-    chatbox.setAttribute("page_id", "100924292344338");
-    chatbox.setAttribute("attribution", "biz_inbox");
+  <script src="js/jquery-3.5.1.slim.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/popper.min.js"></script>
 
-    window.fbAsyncInit = function () {
-      FB.init({
-        xfbml: true,
-        version: 'v12.0'
-      });
-    };
-
-    (function (d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-  </script>
-
-  <!-- Messenger Chat plugin Code Ends-->
 
 </body>
+
+<!-- Mirrored from cwithjen.somee.com/6_Operators.aspx by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Sep 2021 13:43:19 GMT -->
 
 </html>
